# SATySFi-xml

./: .gitignore  README.md  Satyristes  satysfi-xml-doc.opam  satysfi-xml.opam
doc/: xml-ja.saty
src/: xml.satyg
