opam-version: "2.0"
name: "satysfi-xml-doc"
version: "1.0.0"
synopsis: "Document of A Great SATySFi Package"
description: """
Brilliant description comes here.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-xml"
dev-repo: "git+https://github.com/puripuri2100/satysfi-xml.git"
bug-reports: "https://github.com/puripuri2100/satysfi-xml/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.6" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # You may want to include the corresponding library
  "satysfi-xml" {= "%{version}%"}

  # Other libraries
  "satysfi-dist"
  "satysfi-base" {>= "1.4.0" & < "2.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "xml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "xml-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
