opam-version: "2.0"
name: "satysfi-xml"
version: "1.0.3"
synopsis: "XML parser with SATySFi"
description: """
XML parser with SATySFi.
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/satysfi-xml"
dev-repo: "git+https://github.com/puripuri2100/satysfi-xml.git"
bug-reports: "https://github.com/puripuri2100/satysfi-xml/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "1.0" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base" {>= "1.4.0" & < "2.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "xml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "xml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
